--- a/Exercises/pages/index.html
+++ b/Exercises/pages/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercises</title>
+    <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
+    
     <h1> this is my exercises section</h1>
+    <button type="button"
+onclick="date_add()">
+Click me to display Date and Time.</button>
+<p id="demo"></p>
+
+<button onclick="turnOnLight() ">Turn on the light</button>
+
+<img id="myImage" src="img/download (1).png" style="width:100px">
+
+<button onclick="turnOffLight() ">Turn off the light</button>
+
+<p id="about">JavaScript can change the style of an HTML element.</p>
+
+<button type="button" onclick="init()">Click Me!</button>
+
 </body>
 </html>
